fix: text overflow in mobile

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,7 +6,7 @@
     padding-top: 45px;
     margin-left: 15.625%;
     margin-right: 15.625%;
-    border-bottom: rgba(255, 255, 255, 0.7) 1px solid;
+    border-bottom: rgba(84, 84, 84, 0.7) 1px solid;
     align-self: stretch;
 }
 
