--- a/blocks/profile/__occupation/profile__occupation.css
+++ b/blocks/profile/__occupation/profile__occupation.css
@@ -8,6 +8,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+    grid-area: 2 / 1 / 3 / 3;
 }
 
 @media screen and (max-width: 950px) {
@@ -26,5 +27,6 @@
     .profile__occupation {
         font-size: 14px;
         line-height: 1.2;
+        max-width: 282px;
     }
 }
